--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -23,7 +23,8 @@
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One:400">
     <!--De link naar CSS sheet-->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+    <link rel="stylesheet" href="/css/index2.css">
+    <script src="/js/index2.js"></script>
     <!--De link naar google API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQIWRbnpkFpMJYEyUfTbIGubHptuyJNao&callback=initMap&libraries=&v=weekly"
             defer
@@ -132,7 +133,6 @@
 <br>
 <p class="text-center">Sed ut perspiciatis unde omnis iste
     natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-</div>
 <br>
 <br>
 <br>
@@ -196,7 +196,86 @@
 </div>
 <br>
 <br>
+<hr>
+<br>
+<br>
+<div class="hero__caption text-center">
+    <h1 class="header" >FAQ</h1>
+    <br>
+    <p class="text-center">Sed ut perspiciatis unde omnis iste
+        natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+</div>
+<br>
 
+<div class="container demo">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <i class="more-less glyphicon glyphicon-plus"><b>+</b></i>
+                        <b>Lorem Ipsum Setum Getum</b>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                        Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
+                        Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
+                        tincidunt molestie ligula. Integer velit turpis, ornare nec efficitur quis, dictum sed dui. In nec egestas augue,
+                        eu congue ipsum. Cras vitae orci magna.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <i class="more-less glyphicon glyphicon-plus"><b>+</b></i>
+                        <b>Lorem Ipsum Setum Getum</b>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                        Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
+                        Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
+                        tincidunt molestie ligula. Integer velit turpis, ornare nec efficitur quis, dictum sed dui. In nec egestas augue,
+                        eu congue ipsum. Cras vitae orci magna.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <i class="more-less glyphicon glyphicon-plus"><b>+</b></i>
+                        <b>Lorem Ipsum Setum Getum</b>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                        Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
+                        Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
+                        tincidunt molestie ligula. Integer velit turpis, ornare nec efficitur quis, dictum sed dui. In nec egestas augue,
+                        eu congue ipsum. Cras vitae orci magna.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<br>
 <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-8189">
     <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-custom-font u-text u-text-1">
