Front-end page finished for sprint 4

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -13,8 +13,12 @@
     <link rel="stylesheet" href="/css/Page-11.css" media="screen">
     <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/jquery3.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage3.js" defer=""></script>
     <link rel="stylesheet" href="/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="/css/Pagina-1.css" media="screen">
+    <link rel="stylesheet" href="/css/nicepage3.css" media="screen">
+    <link rel="stylesheet" href="/css/Page-13.css" media="screen">
     <script class="u-script" type="text/javascript" src="/js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 2.30.1, nicepage.com">
@@ -124,18 +128,43 @@
         </div>
     </div>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="container">
+    <section class="u-clearfix-1 u-section-2" id="sec-e55e">
+        <div class="u-clearfix-1 u-sheet u-sheet-1">
+            <h2 class="u-text u-text-default u-text-2"><b>Sample Headline</b>
+            </h2>
+            <img src="/images/GPS_Data_tacker_phone.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="665" data-image-height="670">
+            <p class="u-text u-text-2">Sample text. Click to select the text box.&nbsp;<br>Click again or double click to start editing the text.
+            </p>
+            <img src="/images/siren.png" alt="" class="u-image u-image-default u-image-2" data-image-width="512" data-image-height="512">
+            <img src="/images/locatie.png" alt="" class="u-image u-image-default u-image-3" data-image-width="99" data-image-height="98">
+            <img src="/images/bill.png" alt="" class="u-image u-image-default u-image-4" data-image-width="58" data-image-height="58">
+            <h5 class="u-text u-text-default u-text-palette-2-base u-text-3">Sample Headline</h5>
+            <h5 class="u-text u-text-default u-text-palette-2-base u-text-4">Sample Headline</h5>
+            <h5 class="u-text u-text-custom-color-2 u-text-5">Sample Headline</h5>
+            <p class="u-text u-text-6">Sample text. Click to select the text box.&nbsp;<br>Click again or double click to start editing the text.
+            </p>
+            <p class="u-text u-text-7">Sample text. Click to select the text box.&nbsp;<br>Click again or double click to start editing the text.
+            </p>
+            <p class="u-text u-text-8">Sample text. Click to select the text box.&nbsp;<br>Click again or double click to start editing the text.
+            </p>
+        </div>
+    </section>
+</div>
 
+<hr>
+
+<br><br><br>
 <!--Title head-->
-<div class="hero__caption text-center">
+<div class="hero__caption text-center mb-5">
     <h1 class="header" >Waarom u een Safety Band</h1>
     <h1 class="header">moet kopen</h1>
 </div>
 <br>
 <p class="text-center">Sed ut perspiciatis unde omnis iste
     natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-<br>
-<br>
-<br>
+<br><br><br>
 <!-- Section 1 images with icons-->
 <div class="container">
     <div class="row text-center">
@@ -194,11 +223,11 @@
         </div>
     </div>
 </div>
-<br>
-<br>
+<br><br>
+
 <hr>
-<br>
-<br>
+
+<br><br>
 <div class="hero__caption text-center">
     <h1 class="header" >FAQ</h1>
     <br>
@@ -221,7 +250,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                    <p class="ml-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
                         Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
                         Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
@@ -242,7 +271,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                    <p class="ml-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
                         Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
                         Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
@@ -263,7 +292,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
+                    <p class="ml-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus faucibus libero pulvinar aliquam.
                         Integer id dolor convallis, tincidunt dolor vel, efficitur arcu. Maecenas auctor fringilla bibendum.
                         Suspendisse cursus non sem nec vehicula. Nam id pulvinar dolor. Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit. Suspendisse consectetur tellus id ultricies semper. Maecenas urna arcu, blandit vel sapien in,
