working on templates

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -64,7 +64,7 @@
         <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3" th:href="@{/over-ons}">Over Ons</a>
     </p>
     <p class="u-text u-text-default u-text-4">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" th:href="@{/prijzen}">Prijzen</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" th:href="@{/prijzen.html}">Prijzen</a>
     </p>
     <p class="u-text u-text-default u-text-5">
         <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-5" th:href="@{/faq}">FAQ</a>
