--- a/src/main/resources/templates/home/faq.html
+++ b/src/main/resources/templates/home/faq.html
@@ -11,29 +11,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/nicepage1.css" media="screen">
     <link rel="stylesheet" href="/css/Page-11.css" media="screen">
-    <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/jquery3.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/nicepage3.js" defer=""></script>
+
     <link rel="stylesheet" href="/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="/css/Pagina-1.css" media="screen">
     <link rel="stylesheet" href="/css/nicepage3.css" media="screen">
     <link rel="stylesheet" href="/css/Page-13.css" media="screen">
+
+    <!--De link naar CSS sheet-->
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index2.css">
+
+    <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/jquery3.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage3.js" defer=""></script>
+
     <script class="u-script" type="text/javascript" src="/js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+
     <meta name="generator" content="Nicepage 2.30.1, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One:400">
-    <!--De link naar CSS sheet-->
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/index2.css">
+
     <script src="/js/index2.js"></script>
     <!--De link naar google API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQIWRbnpkFpMJYEyUfTbIGubHptuyJNao&callback=initMap&libraries=&v=weekly"
             defer
     ></script>
-
     <!--De link naar eigen javascript -->
     <script src="/js/script.js"></script>
 
@@ -44,13 +49,15 @@
         "url": "index.html",
         "logo": "images/default-logo.png",
         "sameAs": []
-    }</script>
+    }
+    </script>
     <meta property="og:title" content="Pagina 1">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
 </head>
+<!-- Nav -->
 <body class="u-body">
 <section class="u-clearfix u-section-1" id="sec-b34a">
     <p class="u-text u-text-custom-color-1 u-text-1">
@@ -76,71 +83,9 @@
             </p>
         </div>
     </div>
-    <section>
-<!--Text-Image shape -->
-        <section class="u-clearfix u-image u-section-1" id="sec-8ff2" data-image-width="1400" data-image-height="995">
-            <div class="u-clearfix u-sheet u-sheet-1">
-                <h1 class="u-text u-text-body-alt-color u-title u-text-1">PRIJZEN</h1>
-                <img src="/images/Ring_copy.png" alt="" class="u-image u-image-default u-image-1" data-image-width="299" data-image-height="378">
-            </div>
-        </section>
+    <!-- END nav -->
 
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5">
-                        <img class="img-fluid" src="/images/glasses and code.png" alt="#">
-                    </div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        <h1 class="header" >Over ons</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper ipsum a fringilla tincidunt. Nunc blandit est vel dui
-                            consectetur, vel cursus odio aliquet. Nunc sit amet dolor cursus, varius mi ut, cursus urna. Nullam elementum, sapien in elementum
-                            vestibulum, nunc ipsum facilisis sem, vitae laoreet ex risus in orci. Phasellus enim magna, suscipit a sapien non, pharetra egestas
-                            ipsum. Quisque eu rhoncus nulla. Duis vel magna a nisl feugiat tincidunt. Praesent pretium, magna nec tincidunt facilisis, lectus nibh
-                            finibus lectus, nec faucibus nisl tortor maximus dui. Aenean nec mi in metus mattis tempor. Sed posuere leo eget diam blandit, eget pulvinar
-                            orci sollicitudin. Praesent porta, ante vel pellentesque suscipit, felis tellus lacinia sem, sit amet placerat neque ligula et metus.
-                            Sed tincidunt in ligula eget varius. Maecenas efficitur sem venenatis placerat suscipit. Morbi eu tristique purus. Phasellus elit elit,
-                            tempus ac mauris eu, suscipit suscipit lectus. Nulla ut quam non odio commodo eleifend.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <hr>
-    <br>
-    <section>
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="p-5">
-                        <img class="img-fluid" src="/images/macs.png" alt="#">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="p-5">
-                        <h1 class="header" >Lorem Ipsum</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper ipsum a fringilla tincidunt. Nunc blandit est vel dui
-                            consectetur, vel cursus odio aliquet. Nunc sit amet dolor cursus, varius mi ut, cursus urna. Nullam elementum, sapien in elementum
-                            vestibulum, nunc ipsum facilisis sem, vitae laoreet ex risus in orci. Phasellus enim magna, suscipit a sapien non, pharetra egestas
-                            ipsum. Quisque eu rhoncus nulla. Duis vel magna a nisl feugiat tincidunt. Praesent pretium, magna nec tincidunt facilisis, lectus nibh
-                            finibus lectus, nec faucibus nisl tortor maximus dui. Aenean nec mi in metus mattis tempor. Sed posuere leo eget diam blandit, eget pulvinar
-                            orci sollicitudin. Praesent porta, ante vel pellentesque suscipit, felis tellus lacinia sem, sit amet placerat neque ligula et metus.
-                            Sed tincidunt in ligula eget varius. Maecenas efficitur sem venenatis placerat suscipit. Morbi eu tristique purus. Phasellus elit elit,
-                            tempus ac mauris eu, suscipit suscipit lectus. Nulla ut quam non odio commodo eleifend.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</section>
-
-<!-- Modal -->
+<!-- location -->
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -186,78 +131,10 @@
         </div>
     </div>
 </div>
-<hr>
+<!-- END location -->
 <br>
-<!--Waarom u een safetybanf moet kopen-->
-<div class="hero__caption text-center mb-5">
-    <h1 class="header" >Waarom u een Safety Band</h1>
-    <h1 class="header">moet kopen</h1>
-</div>
 <br>
-<p class="text-center">Sed ut perspiciatis unde omnis iste
-    natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-<br><br><br>
-<!-- Section 1 images with icons-->
-<div class="container">
-    <div class="row text-center">
-        <div class="col-lg-4">
-            <img src="/images/Veiligheid_icons.png" class="rounded" width="60" height="60">
-            <h3 class="header-sub">Veiligheid</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <img src="/images/klantenservice1.png" class="rounded" alt="Cinque Terre" width="60" height="60">
-            <h3 class="header-sub">Klantenservice</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <img src="/images/betaalbaar1.png" class="rounded" alt="Cinque Terre" width="60" height="60">
-            <h3 class="header-sub">Betaalbaar</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-    </div>
-</div>
-<!-- Section 2 images with icons-->
-<div class="container">
-    <div class="row text-center">
-        <div class="col-lg-4">
-            <img src="/images/customer-support1.png" class="rounded" alt="Cinque Terre" width="60" height="60">
-            <h3 class="header-sub">customization</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <img src="/images/realtime_tech.png" class="rounded" alt="Cinque Terre" width="60" height="60">
-            <h3 class="header-sub">Real-time technologie</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-        <div class="col-lg-4">
-            <img src="/images/badge1.png" class="rounded" alt="Cinque Terre" width="60" height="60">
-            <h3 class="header-sub">Bonus syteem</h3>
-            <p class="mb-4">At vero eos et accusamus
-                et iusto odio dignissimos ducimus
-                qui blanditiis praesentium
-            </p>
-        </div>
-    </div>
-</div>
-<br><br>
-<hr>
-<br><br>
+<!-- FAQ Section -->
 <div class="hero__caption text-center">
     <h1 class="header" >FAQ</h1>
     <br>
@@ -265,7 +142,6 @@
         natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
 </div>
 <br>
-
 <div class="container demo">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
@@ -335,6 +211,11 @@
 </div>
 <br>
 <br>
+    <br>
+    <br>
+<!-- END FAQ Section -->
+
+<!-- Footer -->
 <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-8189">
     <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-custom-font u-text u-text-1">
@@ -398,7 +279,7 @@
             reserved</p>
     </div>
 </footer>
-
+<!-- End Footer -->
 
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -412,5 +293,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 -->
 </body>
-
 </html>
