--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -11,29 +11,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/nicepage1.css" media="screen">
     <link rel="stylesheet" href="/css/Page-11.css" media="screen">
-    <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/jquery3.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="/js/nicepage3.js" defer=""></script>
+
     <link rel="stylesheet" href="/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="/css/Pagina-1.css" media="screen">
     <link rel="stylesheet" href="/css/nicepage3.css" media="screen">
     <link rel="stylesheet" href="/css/Page-13.css" media="screen">
+
+    <!--De link naar CSS sheet-->
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index2.css">
+
+    <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/jquery3.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage3.js" defer=""></script>
+
     <script class="u-script" type="text/javascript" src="/js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+
     <meta name="generator" content="Nicepage 2.30.1, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One:400">
-    <!--De link naar CSS sheet-->
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/index2.css">
+
     <script src="/js/index2.js"></script>
     <!--De link naar google API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQIWRbnpkFpMJYEyUfTbIGubHptuyJNao&callback=initMap&libraries=&v=weekly"
             defer
     ></script>
-
     <!--De link naar eigen javascript -->
     <script src="/js/script.js"></script>
 
@@ -44,13 +49,15 @@
         "url": "index.html",
         "logo": "images/default-logo.png",
         "sameAs": []
-    }</script>
+    }
+    </script>
     <meta property="og:title" content="Pagina 1">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
 </head>
+<!-- Nav -->
 <body class="u-body">
 <section class="u-clearfix u-section-1" id="sec-b34a">
     <p class="u-text u-text-custom-color-1 u-text-1">
@@ -64,7 +71,7 @@
         <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3" th:href="@{/over-ons}">Over Ons</a>
     </p>
     <p class="u-text u-text-default u-text-4">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" th:href="@{/prijzen.html}">Prijzen</a>
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" th:href="@{/prijzen}">Prijzen</a>
     </p>
     <p class="u-text u-text-default u-text-5">
         <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-5" th:href="@{/faq}">FAQ</a>
@@ -76,13 +83,16 @@
             </p>
         </div>
     </div>
+    <!-- END nav -->
+<!-- Image hero-banner -->
     <p class="u-text u-text-7">Lorem ipsum sit omis natus sinta</p>
     <img src="/images/Watch.png" alt="" class="u-image u-image-default u-image-1" data-image-width="312" data-image-height="477">
     <p class="u-text u-text-8">Increase productivity with a simple to-do app. app for managing your personal budgets.</p>
     <img src="/images/City.png" alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1400" data-image-height="245">
 </section>
+<!-- END hero-image banner -->
 
-<!-- Modal -->
+<!-- location -->
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -129,6 +139,9 @@
     </div>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- END location -->
+
+<!-- Sample Line Section -->
 <div class="container">
     <section class="u-clearfix-1 u-section-2" id="sec-e55e">
         <div class="u-clearfix-1 u-sheet u-sheet-1">
@@ -152,11 +165,11 @@
         </div>
     </section>
 </div>
-
 <hr>
-
 <br><br><br>
-<!--Title head-->
+<!-- END Sample Line section -->
+
+<!-- Waarom een Safetyband Section-->
 <div class="hero__caption text-center mb-5">
     <h1 class="header" >Waarom u een Safety Band</h1>
     <h1 class="header">moet kopen</h1>
@@ -165,6 +178,8 @@
 <p class="text-center">Sed ut perspiciatis unde omnis iste
     natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
 <br><br><br>
+<!-- End Waarom een Safetyband section -->
+
 <!-- Section 1 images with icons-->
 <div class="container">
     <div class="row text-center">
@@ -194,6 +209,8 @@
         </div>
     </div>
 </div>
+<!-- END Section 1 images with icons-->
+
 <!-- Section 2 images with icons-->
 <div class="container">
     <div class="row text-center">
@@ -224,10 +241,11 @@
     </div>
 </div>
 <br><br>
-
 <hr>
-
 <br><br>
+<!-- END Section 2 images with icons-->
+
+<!-- FAQ Section -->
 <div class="hero__caption text-center">
     <h1 class="header" >FAQ</h1>
     <br>
@@ -305,6 +323,9 @@
 </div>
 <br>
 <br>
+<!-- END FAQ Section -->
+
+<!-- Footer -->
 <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-8189">
     <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-custom-font u-text u-text-1">
@@ -368,6 +389,8 @@
             reserved</p>
     </div>
 </footer>
+<!-- End Footer -->
+
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
