--- a/src/main/resources/templates/home/prijzen.html
+++ b/src/main/resources/templates/home/prijzen.html
@@ -16,10 +16,15 @@
     <link rel="stylesheet" href="/css/Pagina-1.css" media="screen">
     <link rel="stylesheet" href="/css/nicepage3.css" media="screen">
     <link rel="stylesheet" href="/css/Page-13.css" media="screen">
+    <link rel="stylesheet" href="/css/Page-1.css" media="screen">
+    <link rel="stylesheet" href="/css/Page-2.css" media="screen">
 
     <!--De link naar CSS sheet-->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" href="/css/index2.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/Contactformulier.css">
+    <link rel="stylesheet" href="/css/prijzen.css">
 
     <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
@@ -57,87 +62,94 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
 </head>
+
 <!-- Nav -->
 <body class="u-body">
-<section class="u-clearfix u-section-1" id="sec-b34a">
-    <p class="u-text u-text-custom-color-1 u-text-1">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-1 u-btn-1" href="#">Safety<font class="u-text-black">Band</font>
-        </a>
-    </p>
-    <p class="u-text u-text-default u-text-2">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-2" th:href="@{/}">Home</a>
-    </p>
-    <p class="u-text u-text-3">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-3" th:href="@{/over-ons}">Over Ons</a>
-    </p>
-    <p class="u-text u-text-default u-text-4">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-4" th:href="@{/prijzen}">Prijzen</a>
-    </p>
-    <p class="u-text u-text-default u-text-5">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-5" th:href="@{/faq}">FAQ</a>
-    </p>
-    <div class="u-black u-container-style u-group u-radius-45 u-shape-round u-group-1" data-toggle="modal" data-target=".bd-example-modal-lg">
-        <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <p class="u-text u-text-6">
-                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-6">Locatie check</a>
-            </p>
-        </div>
-    </div>
     <!-- END nav -->
-    <!-- Image hero-banner -->
-    <p class="u-text u-text-7">Lorem ipsum sit omis natus sinta</p>
-    <img src="/images/prijzen.png" alt="" class="u-image u-image-default u-image-1" data-image-width="312" data-image-height="477">
-</section>
-<!-- END hero-image banner -->
 
-<!-- location -->
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<!-- HERO -->
+    <section class="u-clearfix u-image u-section-prijzen" id="sec-8ff2" data-image-width="1400" data-image-height="995">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <h1 class="u-text u-text-body-alt-color u-title u-text-1">PRIJZEN</h1>
+            <img src="images/Ring_copy.png" alt="" class="u-image u-image-default u-image-1" data-image-width="299" data-image-height="378">
+        </div>
+    </section>
+<!-- END HERO -->
+
+
+<!-- Safetyband Product -->
+
+<!-- END Safetyband Product -->
+
+<!-- Formulier -->
+
+    <section class="u-align-left u-clearfix u-section-100" id="sec-0a41">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <h2 class="u-align-center u-text u-text-custom-color-1 u-text-1">Neem contact met ons op</h2>
+            <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-2">Naam</p>
+            <div class="u-form u-form-1">
+                <form action="#" method="POST" class="u-clearfix u-form-spacing-37 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form">
+                    <div class="u-form-group u-form-group-1">
+                        <label for="text-0564" class="u-form-control-hidden u-label"></label>
+                        <input type="text" placeholder="" id="text-0564" name="text-2" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+                    </div>
+                    <div class="u-form-group u-form-group-2">
+                        <label for="text-7c2e" class="u-form-control-hidden u-label"></label>
+                        <input type="text" placeholder="" id="text-7c2e" name="text" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+                    </div>
+                    <div class="u-form-group u-form-group-3">
+                        <label for="text-b340" class="u-form-control-hidden u-label"></label>
+                        <input type="text" placeholder="" id="text-b340" name="text-3" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+                    </div>
+                    <div class="u-form-group u-form-group-4">
+                        <label for="text-0960" class="u-form-control-hidden u-label"></label>
+                        <input type="text" placeholder="" id="text-0960" name="text-4" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+                    </div>
+                    <div class="u-align-left u-form-group u-form-submit u-form-group-5">
+                        <a href="#" class="u-btn u-btn-submit u-button-style u-custom-color-1 u-hover-palette-1-dark-1 u-btn-1">Verzenden<br>
+                        </a>
+                        <input type="submit" value="submit" class="u-form-control-hidden">
+                    </div>
+                    <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+                    <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+                    <input type="hidden" value="" name="recaptchaResponse">
+                </form>
             </div>
-            <div class="modal-body">
-                <!--Een container-div voor een input-box en een onzichtbare button-->
-                <div id ="container">
-
-                    <!--Een input-box, hier kan iemand de coordinaten intypen (later wordt dit het armband-ID)-->
-                    <input type = "text"
-                           id = "coordinatenInput"
-                           onfocus = "this.value=''"
-                           value = "breedtegraad,lengtegraad" />
-
-                    <!--Een onzichtbare button om een eventListener te laten werken-->
-                    <button id = "coordinatesButton" onclick="initMap()">button</button>
-
-                    <!--Een script die de eventListener maakt-->
-                    <script>
-            const input = document.getElementById("coordinatenInput");
-
-            input.addEventListener("keyup", function(event) {
-                if(event.keyCode === 13) {
-                    event.preventDefault();
-                    document.getElementById("coordinatesButton").click();
-                }
-            });
-        </script>
+            <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-3">Achternaam</p>
+            <p class="u-align-center u-text u-text-custom-color-1 u-text-4">Email</p>
+            <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-5">Telefoonnummer</p>
+            <div class="u-container-style u-group u-group-1">
+                <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
+                    <img src="/images/HHS_adres_sprint5.png" alt="" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-right-xl u-expanded-width u-image u-image-default u-image-1" data-image-width="929" data-image-height="611">
+                    <p class="u-text u-text-custom-color-1 u-text-default u-text-6">HOOFDLOCATIE</p>
+                    <p class="u-text u-text-custom-color-1 u-text-7">Johanna Westerdijkplein 75<br>2521 EN Den Haag&nbsp;
+                    </p><span class="u-icon u-icon-circle u-text-custom-color-1 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 54.757 54.757" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f446"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 54.757 54.757" x="0px" y="0px" id="svg-f446" style="enable-background:new 0 0 54.757 54.757;"><path d="M40.94,5.617C37.318,1.995,32.502,0,27.38,0c-5.123,0-9.938,1.995-13.56,5.617c-6.703,6.702-7.536,19.312-1.804,26.952
+	L27.38,54.757L42.721,32.6C48.476,24.929,47.643,12.319,40.94,5.617z M27.557,26c-3.859,0-7-3.141-7-7s3.141-7,7-7s7,3.141,7,7
+	S31.416,26,27.557,26z"></path></svg></span>
+                    <p class="u-text u-text-custom-color-1 u-text-8">+31 631298500</p><span class="u-icon u-icon-circle u-text-custom-color-1 u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 60 60" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-894d"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 60 60" x="0px" y="0px" id="svg-894d" style="enable-background:new 0 0 60 60;"><g><path d="M56.612,4.569c-0.391-0.391-1.023-0.391-1.414,0s-0.391,1.023,0,1.414c3.736,3.736,3.736,9.815,0,13.552
+		c-0.391,0.391-0.391,1.023,0,1.414c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293
+		C61.128,16.434,61.128,9.085,56.612,4.569z"></path><path d="M52.401,6.845c-0.391-0.391-1.023-0.391-1.414,0s-0.391,1.023,0,1.414c1.237,1.237,1.918,2.885,1.918,4.639
+		s-0.681,3.401-1.918,4.638c-0.391,0.391-0.391,1.023,0,1.414c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293
+		c1.615-1.614,2.504-3.764,2.504-6.052S54.017,8.459,52.401,6.845z"></path><path d="M4.802,5.983c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0c-4.516,4.516-4.516,11.864,0,16.38
+		c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414
+		C1.065,15.799,1.065,9.72,4.802,5.983z"></path><path d="M9.013,6.569c-0.391-0.391-1.023-0.391-1.414,0c-1.615,1.614-2.504,3.764-2.504,6.052s0.889,4.438,2.504,6.053
+		c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414
+		c-1.237-1.237-1.918-2.885-1.918-4.639S7.775,9.22,9.013,7.983C9.403,7.593,9.403,6.96,9.013,6.569z"></path><circle cx="30" cy="53" r="2"></circle><path d="M42.595,0H17.405C14.976,0,13,1.977,13,4.405v51.189C13,58.023,14.976,60,17.405,60h25.189C45.024,60,47,58.023,47,55.595
+		V4.405C47,1.977,45.024,0,42.595,0z M33,3h1c0.552,0,1,0.447,1,1s-0.448,1-1,1h-1c-0.552,0-1-0.447-1-1S32.448,3,33,3z M26,3h4
+		c0.552,0,1,0.447,1,1s-0.448,1-1,1h-4c-0.552,0-1-0.447-1-1S25.448,3,26,3z M30,57c-2.206,0-4-1.794-4-4s1.794-4,4-4s4,1.794,4,4
+		S32.206,57,30,57z M45,46H15V8h30V46z"></path>
+</g></svg></span><span class="u-icon u-icon-circle u-text-custom-color-1 u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 477.867 477.867" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d820"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 477.867 477.867" x="0px" y="0px" id="svg-d820" style="enable-background:new 0 0 477.867 477.867;"><g><g><path d="M460.8,68.267H17.067l221.867,182.75L463.309,68.779C462.488,68.539,461.649,68.368,460.8,68.267z"></path>
+</g>
+</g><g><g><path d="M249.702,286.31c-6.288,5.149-15.335,5.149-21.623,0L0,98.406v294.127c0,9.426,7.641,17.067,17.067,17.067H460.8    c9.426,0,17.067-7.641,17.067-17.067V100.932L249.702,286.31z"></path>
+</g>
+</g></svg></span>
+                    <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-9">1023758@student.hhs.nl</p>
                 </div>
-
-                <!--De div voor de kaart-->
-                <div id="map"></div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
-    </div>
-</div>
-<br><br>
-<!-- END location -->
+    </section>
+
+<!-- END Formulier -->
 
 <!-- FAQ Section -->
 <div class="hero__caption text-center">
@@ -147,7 +159,6 @@
         natus error sit voluptatem accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa quae ab illo inventore</p>
 </div>
 <br>
-
 <div class="container demo">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
