--- a/src/main/resources/static/css/nicepage3.css
+++ b/src/main/resources/static/css/nicepage3.css
@@ -31075,7 +31075,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-text-hover-custom-color-1:hover svg,
         .u-text-hover-custom-color-1:focus svg
         {
-            fill: #e81313;
+            fill: #242f51 !important;
         }
 
         .u-link.u-text-custom-color-1:hover
