--- a/src/main/resources/templates/home/over-ons.html
+++ b/src/main/resources/templates/home/over-ons.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="/css/Pagina-1.css" media="screen">
     <link rel="stylesheet" href="/css/nicepage3.css" media="screen">
     <link rel="stylesheet" href="/css/Page-13.css" media="screen">
+    <link rel="stylesheet" href="/css/overons.css">
+
     <script class="u-script" type="text/javascript" src="/js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 2.30.1, nicepage.com">
@@ -77,14 +79,16 @@
         </div>
     </div>
     <section>
-<!--Text-Image shape -->
-        <section class="u-clearfix u-image u-section-1" id="sec-8ff2" data-image-width="1400" data-image-height="995">
+        <!-- HERO -->
+        <section class="u-clearfix u-image u-section-overons" id="sec-8ff2" data-image-width="1400" data-image-height="995">
             <div class="u-clearfix u-sheet u-sheet-1">
-                <h1 class="u-text u-text-body-alt-color u-title u-text-1">PRIJZEN</h1>
-                <img src="/images/Ring_copy.png" alt="" class="u-image u-image-default u-image-1" data-image-width="299" data-image-height="378">
+                <h1 class="u-text u-text-body-alt-color u-title u-text-1">Safetyband</h1>
+                <img src="images/Ring_copy.png" alt="" class="u-image u-image-default u-image-1" data-image-width="299" data-image-height="378">
             </div>
         </section>
+        <!-- END HERO -->
 
+<!--Text-Image shape -->
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
