--- a/src/main/resources/templates/home/prijzen.html
+++ b/src/main/resources/templates/home/prijzen.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/Contactformulier.css">
     <link rel="stylesheet" href="/css/prijzen.css">
+    <link rel="stylesheet" href="/css/product.css">
 
     <script class="u-script" type="text/javascript" src="/js/jquery1.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
@@ -65,6 +66,7 @@
 
 <!-- Nav -->
 <body class="u-body">
+
     <!-- END nav -->
 
 <!-- HERO -->
@@ -79,14 +81,70 @@
 
 <!-- Safetyband Product -->
 
+    <section class="u-align-left u-clearfix u-section-product" id="sec-c84e">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-text u-text-1">SafetyBand</p><span class="u-icon u-icon-circle u-text-palette-3-base u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 49.94 49.94" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6f18"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 49.94 49.94" x="0px" y="0px" id="svg-6f18" style="enable-background:new 0 0 49.94 49.94;"><path d="M48.856,22.73c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+	c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+	L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.622c-1.359,0.197-2.467,1.131-2.892,2.438
+	c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.701
+	c-0.183,1.06,0.095,2.091,0.781,2.904c1.066,1.267,2.927,1.653,4.415,0.871l10.814-5.686c0.452-0.237,1.021-0.235,1.472,0
+	l10.815,5.686c0.526,0.277,1.087,0.417,1.666,0.417c1.057,0,2.059-0.47,2.748-1.288c0.687-0.813,0.964-1.846,0.781-2.904
+	l-2.065-12.042c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.73z"></path></svg>
+
+        </span><span class="u-icon u-icon-circle u-text-palette-3-base u-icon-2">
+            <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 49.94 49.94" style="">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-55a6"></use></svg>
+
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 49.94 49.94" x="0px" y="0px" id="svg-55a6" style="enable-background:new 0 0 49.94 49.94;"><path d="M48.856,22.73c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+	c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+	L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.622c-1.359,0.197-2.467,1.131-2.892,2.438
+	c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.701
+	c-0.183,1.06,0.095,2.091,0.781,2.904c1.066,1.267,2.927,1.653,4.415,0.871l10.814-5.686c0.452-0.237,1.021-0.235,1.472,0
+	l10.815,5.686c0.526,0.277,1.087,0.417,1.666,0.417c1.057,0,2.059-0.47,2.748-1.288c0.687-0.813,0.964-1.846,0.781-2.904
+	l-2.065-12.042c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.73z"></path></svg></span>
+
+            <span class="u-icon u-icon-circle u-text-palette-3-base u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 49.94 49.94" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5497"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 49.94 49.94" x="0px" y="0px" id="svg-5497" style="enable-background:new 0 0 49.94 49.94;"><path d="M48.856,22.73c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+	c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+	L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.622c-1.359,0.197-2.467,1.131-2.892,2.438
+	c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.701
+	c-0.183,1.06,0.095,2.091,0.781,2.904c1.066,1.267,2.927,1.653,4.415,0.871l10.814-5.686c0.452-0.237,1.021-0.235,1.472,0
+	l10.815,5.686c0.526,0.277,1.087,0.417,1.666,0.417c1.057,0,2.059-0.47,2.748-1.288c0.687-0.813,0.964-1.846,0.781-2.904
+	l-2.065-12.042c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.73z"></path></svg></span>
+
+            <span class="u-icon u-icon-circle u-text-palette-3-base u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 49.94 49.94" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4d4f"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 49.94 49.94" x="0px" y="0px" id="svg-4d4f" style="enable-background:new 0 0 49.94 49.94;"><path d="M48.856,22.73c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+	c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+	L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.622c-1.359,0.197-2.467,1.131-2.892,2.438
+	c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.701
+	c-0.183,1.06,0.095,2.091,0.781,2.904c1.066,1.267,2.927,1.653,4.415,0.871l10.814-5.686c0.452-0.237,1.021-0.235,1.472,0
+	l10.815,5.686c0.526,0.277,1.087,0.417,1.666,0.417c1.057,0,2.059-0.47,2.748-1.288c0.687-0.813,0.964-1.846,0.781-2.904
+	l-2.065-12.042c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.73z"></path></svg></span>
+
+            <span class="u-icon u-icon-circle u-text-palette-3-base u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 49.94 49.94" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-84c6"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 49.94 49.94" x="0px" y="0px" id="svg-84c6" style="enable-background:new 0 0 49.94 49.94;"><path d="M48.856,22.73c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+	c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+	L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.622c-1.359,0.197-2.467,1.131-2.892,2.438
+	c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.701
+	c-0.183,1.06,0.095,2.091,0.781,2.904c1.066,1.267,2.927,1.653,4.415,0.871l10.814-5.686c0.452-0.237,1.021-0.235,1.472,0
+	l10.815,5.686c0.526,0.277,1.087,0.417,1.666,0.417c1.057,0,2.059-0.47,2.748-1.288c0.687-0.813,0.964-1.846,0.781-2.904
+	l-2.065-12.042c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.73z"></path></svg></span>
+            <img src="images/Watch.png" alt="" class="u-image u-image-default u-image-1" data-image-width="312" data-image-height="477">
+            <p class="u-text u-text-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            <a href="https://nicepage.com" class="u-btn u-button-style u-grey-15 u-hover-palette-1-light-1 u-btn-1">In winkelwagen</a>
+            <a href="https://nicepage.com" class="u-btn u-button-style u-grey-15 u-hover-palette-1-light-1 u-btn-2">1</a>
+            <img src="images/trustlogos.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-2" data-image-width="1000" data-image-height="200"><span class="u-icon u-icon-circle u-text-custom-color-2 u-icon-6"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 36 36" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e029"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 36 36" x="0px" y="0px" id="svg-e029" style="enable-background:new 0 0 36 36;"><path d="M35,0H1C0.448,0,0,0.447,0,1v34c0,0.553,0.448,1,1,1h34c0.552,0,1-0.447,1-1V1C36,0.447,35.552,0,35,0z"></path></svg></span><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 36 36" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-ca42"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 36 36" x="0px" y="0px" id="svg-ca42" style="enable-background:new 0 0 36 36;"><path d="M35,0H1C0.448,0,0,0.447,0,1v34c0,0.553,0.448,1,1,1h34c0.552,0,1-0.447,1-1V1C36,0.447,35.552,0,35,0z"></path></svg></span><span class="u-icon u-icon-circle u-text-custom-color-1 u-icon-8"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 36 36" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4ff9"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 36 36" x="0px" y="0px" id="svg-4ff9" style="enable-background:new 0 0 36 36;"><path d="M35,0H1C0.448,0,0,0.447,0,1v34c0,0.553,0.448,1,1,1h34c0.552,0,1-0.447,1-1V1C36,0.447,35.552,0,35,0z"></path></svg></span><span class="u-icon u-icon-circle u-text-black u-icon-9"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 36 36" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-bfa9"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 36 36" x="0px" y="0px" id="svg-bfa9" style="enable-background:new 0 0 36 36;"><path d="M35,0H1C0.448,0,0,0.447,0,1v34c0,0.553,0.448,1,1,1h34c0.552,0,1-0.447,1-1V1C36,0.447,35.552,0,35,0z"></path></svg></span>
+        </div>
+    </section>
+    <br>
+    <hr>
+    <br>
+    <br>
 <!-- END Safetyband Product -->
 
 <!-- Formulier -->
-
     <section class="u-align-left u-clearfix u-section-100" id="sec-0a41">
         <div class="u-clearfix u-sheet u-sheet-1">
-            <h2 class="u-align-center u-text u-text-custom-color-1 u-text-1">Neem contact met ons op</h2>
-            <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-2">Naam</p>
+            <h2 class="u-align-center u-text u-text-custom-color-1 u-text-10">Neem contact met ons op</h2>
+            <br>
+            <p class="u-align-center u-text u-text-custom-color-1 u-text-default u-text-20">Naam</p>
             <div class="u-form u-form-1">
                 <form action="#" method="POST" class="u-clearfix u-form-spacing-37 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form">
                     <div class="u-form-group u-form-group-1">
@@ -148,7 +206,11 @@
             </div>
         </div>
     </section>
-
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
 <!-- END Formulier -->
 
 <!-- FAQ Section -->
@@ -227,7 +289,6 @@
     </div>
 </div>
 <br>
-<br>
 <!-- END FAQ Section -->
 
 <!-- Footer -->
@@ -292,8 +353,11 @@
         </div>
         <p class="u-small-text u-text u-text-variant u-text-2">Copyright© Groep 3 klas 22 | 2020. All rights
             reserved</p>
+
     </div>
+
 </footer>
+
 <!-- End Footer -->
 
 <!-- Optional JavaScript; choose one of the two! -->
